--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/me.jpg);">
+				   	<li style="background-image: url(images/me.JPG);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -408,7 +408,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/bang.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/bang.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
@@ -422,7 +422,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/freelance.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/freelance.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
@@ -436,7 +436,7 @@
 							</div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/lms.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/lms.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
@@ -447,7 +447,7 @@
 							</div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/this.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/this.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
