--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/me.JPG);">
+				   	<li style="background-image: url(images/me.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
