--- a/portfolio.html
+++ b/portfolio.html
@@ -453,7 +453,7 @@
 										<h3><a href="work.html">Work 04</a></h3>
                                         <span>This Website</span>
                                         <p class="icon">
-											<span><a href="https://github.com/Samarthnehe/Intership-Project/tree/master/Freelance%20Mantra%20intern"><i class="icon-github"></i></a></span>
+											<span><a href="https://github.com/Samarthnehe/Samarthnehe.github.io"><i class="icon-github"></i></a></span>
 											
 										</p>
 										
