--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a Machine Learning enthusiast! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript and PHP. Presently I m learning React.js and Machine Learning. Also I am well versed with Python,C and C++ programming langauges.</p>
+										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a part time Back End Web-Developer! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript and PHP. Presently I m learning React.js and PHP. Also I am well versed with Python,C and C++ programming langauges.</p>
 										<p>Apart from Academics I am also a Speedcuber that makes me mention myself as the <strong>Founder and President of VIT C.U.B.E club</strong>, Sketch Artist and a singer-guitarist! I am a huge fan of Music and Mathematics!</p>
 									</div>
 								</div>
@@ -136,7 +136,7 @@
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Machine Learning Enthusiast</h3>
+										<h3>Back End Web-Developer</h3>
 									</div>
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
