--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,9 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside style="background-color: rgb(26, 24, 24);overflow: hidden;" id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/my.jpeg);"></div>
+				<div class="author-img" style="background-image: url(images/my.jpeg);color: #35e3e9;
+                box-shadow: 0 0 15px #20a3ee;
+                text-shadow: 0 0 15px #1494cf;"></div>
 				<h1 id="colorlib-logo" style="color:white;"><a href="index.html">Samarth Nehe</a></h1>
 				<span class="position"><a href="#">Front End Web-Developer</a></span>
 			</div>
