--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a part time Back End Web-Developer! I am always keen to learn new things regarding Technology. I am an intermediate front end web-developer with good knowledge of HTML,CSS and JavaScript. Presently I m learning React.js and PHP. Also I am well versed with Python,C and C++ programming langauges.</p>
+										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a part time Back End Web-Developer! I am always keen to learn new things regarding Technology. I am an intermediate front end web-developer with good knowledge of HTML,CSS,JavaScript and PHP. Presently I m learning React.js and Node.js. Also I am well versed with Python,C and C++ programming langauges.</p>
 										<p>Apart from Academics I am also a Speedcuber that makes me mention myself as the <strong>Founder and President of VIT C.U.B.E club</strong>, Sketch Artist and a singer-guitarist! I am a huge fan of Music and Mathematics!</p>
 									</div>
 								</div>
