--- a/portfolio.html
+++ b/portfolio.html
@@ -172,8 +172,8 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Front End Web Development</h3>
-									<p>Have good knowledge about HTML,CSS,JavaScript and Bootstrap.Still on the verge to learn React.Js</p>
+									<h3>Full Stack Web Development</h3>
+									<p>Have good knowledge about HTML,CSS,JavaScript and Bootstrap.Still on the verge to learn React.js. Have Worked on projects that use PHP or Node.js</p>
 								</div>
 							</div>
 						</div>
