--- a/portfolio.html
+++ b/portfolio.html
@@ -173,7 +173,7 @@
 								</span>
 								<div class="desc">
 									<h3>Full Stack Web Development</h3>
-									<p>Have good knowledge about HTML,CSS,JavaScript and Bootstrap.Still on the verge to learn React.js. Have Worked on projects that use PHP or Node.js</p>
+									<p>Have good knowledge about HTML,CSS,JavaScript and Bootstrap. Have worked on projects that use PHP or Node.js. Learning React.js</p>
 								</div>
 							</div>
 						</div>
