--- a/portfolio.html
+++ b/portfolio.html
@@ -499,6 +499,20 @@
 								</div>
 							</div>
                         </div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/vithub.png);border: 1px solid black;">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Work 06</a></h3>
+										<span>VITHub is a questionare website made for VITians where students can ask and answer questions and get them clarified.This website is made on Node.js</span>
+										<p class="icon">
+											<span><a href="https://github.com/Samarthnehe/VITHub"><i class="icon-github"></i></a></span>
+											<span><a href="https://vit-hub.herokuapp.com/"><i class="icon-phone3"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+                        </div>
 						
 					
 				</div>
