--- a/portfolio.html
+++ b/portfolio.html
@@ -500,7 +500,7 @@
 							</div>
                         </div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/vithub.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/vithub.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
