--- a/portfolio.html
+++ b/portfolio.html
@@ -405,7 +405,7 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Web Developer</a> <span>2020</span></h2>
-					                  <p>Web Developer Intern at SnapSchool.<br>Did this internship during the summer holidays for 2 months </p>             </div>
+					                  <p>Web Developer Intern at SnapSchool.<br>Did this internship during the summer holidays for a month </p>             </div>
 					            </div>
 					         </article>
 
@@ -414,6 +414,27 @@
 					      </div>
 					   </div>
 				   </div>
+				    <div class="row">
+					<div class="col-md-12">
+					 <div class="timeline-centered">
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner">
+
+							   <div class="timeline-icon color-5">
+								  <i class="icon-pen2"></i>
+							   </div>
+
+							   <div class="timeline-label">
+								  <h2><a href="#">Software Engineer</a> <span>2020</span></h2>
+								  <p>Software Engineer Virtual Intern at JP Morgan.<br>Did this internship during the summer holidays for 2 weeks </p>             </div>
+							</div>
+						 </article>
+
+
+						 
+					  </div>
+				   </div>
+			   </div>
 				</div>
 			</section>
 
