--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Samarth</h1>
 						   					<h2 style="font-weight: 500;">FrontEnd Web-Developer and Professional Speedcuber</h2>
-												<p><a href="./images/resume.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a href="./images/resume1.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
