--- a/portfolio.html
+++ b/portfolio.html
@@ -453,7 +453,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/bang.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/bang.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
@@ -467,7 +467,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/freelance.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/freelance.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
@@ -481,7 +481,7 @@
 							</div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/lms.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/lms.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
@@ -492,7 +492,7 @@
 							</div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/this.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/this.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
@@ -507,7 +507,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/blog.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/blog.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
@@ -521,7 +521,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/vithub.png);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/vithub.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
