--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Samarth</h1>
 						   					<h2 style="font-weight: 500;">FrontEnd Web-Developer and Professional Speedcuber</h2>
-												<p><a href="./images/resume2.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a href="./images/finalresume.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -138,7 +138,7 @@
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Machine Learning Enthusiast</h3>
+										<h3>Back End Web Developer</h3>
 									</div>
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
