--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>WordPress</h3>
+								<h3>ReactJS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -298,7 +298,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Node.Js</h3>
+								<h3>NodeJs</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
