--- a/index.html
+++ b/index.html
@@ -406,8 +406,29 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Software Engineer</a> <span>2020</span></h2>
+								  <h2><a href="#">Software Engineer Intern</a> <span>2020</span></h2>
 								  <p>Software Engineer Virtual Intern at JP Morgan.<br>Did this internship during the summer holidays for 2 weeks </p>             </div>
+							</div>
+						 </article>
+
+
+						 
+					  </div>
+				   </div>
+			   </div>
+					  <div class="row">
+					<div class="col-md-12">
+					 <div class="timeline-centered">
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner">
+
+							   <div class="timeline-icon color-3">
+								  <i class="icon-pen2"></i>
+							   </div>
+
+							   <div class="timeline-label">
+								  <h2><a href="#">Frontend/UX Web Developer Intern</a> <span>2021</span></h2>
+								  <p>Currently working as a Frontend Web Developer Intern at Ziksuka for 2 months</p>             </div>
 							</div>
 						 </article>
 
