--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 box-shadow: 0 0 15px #20a3ee;
                 text-shadow: 0 0 15px #1494cf;"></div>
 				<h1 id="colorlib-logo" style="color:white;"><a href="index.html">Samarth Nehe</a></h1>
-				<span class="position"><a href="#">Front End Web-Developer</a></span>
+				<span style="font-weight:800" class="position"><a href="#">Front End Web-Developer</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -102,7 +102,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Samarth</h1>
-						   					<h2 style="font-weight: 500;">Talk is cheap. Show me the CODE - Linus Torvalds</h2>
+						   					<h2 style="font-weight: 700;">Talk is cheap. Show me the CODE - Linus Torvalds</h2>
 												<p><a href="./images/finalresume.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
