--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a Machine Learning enthusiast! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript and PHP. Presently I m learning React.js and Machine Learning. Also I am well versed with Python,C and C++ programming langauges.</p>
+										<p><strong>Hi I'm Samarth Nehe</strong>. I am a Front End Web-Developer and a Ethical Hackinng enthusiast! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript and PHP. Presently I m learning React.js and Machine Learning. Also I am well versed with Python,C and C++ programming langauges.</p>
 										<p>Apart from Academics I am also a Speedcuber that makes me mention myself as the <strong>Founder and President of VIT C.U.B.E club</strong>, Sketch Artist and a singer-guitarist! I am a huge fan of Music and Mathematics!</p>
 									</div>
 								</div>
@@ -223,9 +223,9 @@
 							<div class="progress-wrap">
 								<h3>HTML</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
@@ -234,9 +234,9 @@
 							<div class="progress-wrap">
 								<h3>CSS and Bootstrap</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -245,9 +245,9 @@
 							<div class="progress-wrap">
 								<h3>JavaScript</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>65%</span>
 								  	</div>
 								</div>
 							</div>
@@ -267,7 +267,7 @@
 							<div class="progress-wrap">
 								<h3>Speedcubing</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
@@ -278,9 +278,9 @@
 							<div class="progress-wrap">
 								<h3>Competitive Coding</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+								    <span>75%</span>
 								  	</div>
 								</div>
 							</div>
@@ -290,8 +290,8 @@
 								<h3>ReactJS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								    <span>60%</span>
 								  	</div>
 								</div>
 							</div>
@@ -301,8 +301,8 @@
 								<h3>NodeJs</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>65%</span>
 								  	</div>
 								</div>
 							</div>
@@ -332,10 +332,10 @@
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>I am a 2<sup>nd</sup> year Computer Science student at Vellore Institute of Technology,Vellore.</p>
+									            <p>I am a 3<sup>rd</sup> year Computer Science student at Vellore Institute of Technology,Vellore.</p>
 													<ul>
                                                         <li>Batch:2018-22</li>
-                                                        <li>Current CGPA- <strong>8.8</strong></li>
+                                                        <li>Current CGPA- <strong>8.82</strong></li>
 								
 													</ul>
 									        </div>
@@ -428,7 +428,7 @@
 
 							   <div class="timeline-label">
 								  <h2><a href="#">Frontend/UX Web Developer Intern</a> <span>2021</span></h2>
-								  <p>Currently working as a Frontend Web Developer Intern at Ziksuka for 2 months</p>             </div>
+								  <p>Intern at Ziksuka for a month as a frontend web developer</p>             </div>
 							</div>
 						 </article>
 
