--- a/index.html
+++ b/index.html
@@ -606,7 +606,34 @@
 								</div>
 							</div>
                         </div>
-						
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/spark.jpeg);border: 1px solid black;">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Work 09</a></h3>
+										<span>Banking Management System</span>
+										<p class="icon">
+											<span><a href="https://github.com/Samarthnehe/TheSparkFoundation"><i class="icon-github"></i></a></span>
+											<span><a href="https://mernstackspark.herokuapp.com/"><i class="icon-phone3"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+                        </div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/amazon.jpeg);border: 1px solid black;">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Work 10</a></h3>
+										<span>Fully functional Amazon Clone</span>
+										<p class="icon">
+											<span><a href="https://github.com/Samarthnehe/Amazon-Clone"><i class="icon-github"></i></a></span>
+											<span><a href=""><i class="icon-phone3"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+                        </div>
 					
 				</div>
 			</section>
