--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
+								<img src="./images/html.png" width="40px" height="40px">
 								<h3>HTML</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
@@ -232,6 +233,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<img src="./images/css.png" width="40px" height="40px">
 								<h3>CSS and Bootstrap</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
@@ -243,6 +245,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
+								<img src="./images/js.png" width="40px" height="40px">
 								<h3>JavaScript</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
@@ -254,6 +257,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<img src="./images/figma.png" width="40px" height="40px">
 								<h3>Figma</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="65"
@@ -265,6 +269,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
+								<img src="./images/rubik.png" width="40px" height="40px">
 								<h3>Speedcubing</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
@@ -276,6 +281,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<img src="./images/python.png" width="40px" height="40px">
 								<h3>Competitive Coding</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
@@ -287,6 +293,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<img src="./images/react.png" width="40px" height="40px">
 								<h3>ReactJS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="75"
@@ -298,6 +305,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<img src="./images/node.png" width="40px" height="40px">
 								<h3>NodeJs</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="75"
@@ -310,6 +318,7 @@
 					</div>
 				</div>
 			</section>
+
 
 			<section class="colorlib-education" data-section="education">
 				<div class="colorlib-narrow-content">
