--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 							</div>
                         </div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/cyber.jpeg);border: 1px solid black;">
+							<div class="project" style="background-image: url(images/cyber.PNG);border: 1px solid black;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 11</a></h3>
