--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								</span>
 								<div class="desc">
 									<h3>Competitive Coding</h3>
-									<p>Well versed with programming languages like Python,C and C++. HackerRank Gold Badge awardee in C++ and Python </p>
+									<p>Well versed with programming languages like Python and C++. 3 star coder on Codechef (1708) and 4-gold badge on HackerRank </p>
 								</div>
 							</div>
 						</div>
