--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Samarth Nehe</strong>. I am primarily a Frontend Web-Developer and an avid Competitive Coder! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript, ReactJS, NodeJS, MongoDB, and Figma. Presently I m learning Firebase and Powerapps. Also I am well versed with Python,C and C++ programming langauges.</p>
+										<p><strong>Hi I'm Samarth Nehe</strong>. I am primarily a Frontend Web-Developer and an avid Competitive Coder! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript, ReactJS, NodeJS, MongoDB, and Figma. Presently I m learning Firebase and NextJS. Also I am well versed with Python,C and C++ programming langauges.</p>
 										<p>Apart from Academics I am also a Speedcuber that makes me mention myself as the <strong>Founder and President of VIT C.U.B.E club</strong>, Sketch Artist and a singer-guitarist! I am a huge fan of Music and Mathematics!</p>
 									</div>
 								</div>
@@ -174,7 +174,7 @@
 								</span>
 								<div class="desc">
 									<h3>Front End Web Development</h3>
-									<p>Have good knowledge about HTML,CSS,JavaScript and Bootstrap.Still on the verge to learn React.Js</p>
+									<p>Have good knowledge about HTML,CSS,JavaScript, Bootstrap and ReactJS. Currently learning Redux and NextJS</p>
 								</div>
 							</div>
 						</div>
@@ -196,7 +196,7 @@
 								</span>
 								<div class="desc">
 									<h3>Speedcubing</h3>
-									<p>Professional Rubik's Cube solver. Specialized in 3x3,4x4,5x5,6x6,Megaminx and 3x3 One Handed. </p>
+									<p>Professional Rubik's Cube speed solver. Specialized in puzzles like 3x3,4x4,5x5,6x6,Megaminx and 3x3 One Handed. </p>
 								</div>
 							</div>
 						</div>
