--- a/index.html
+++ b/index.html
@@ -315,6 +315,32 @@
 								</div>
 							</div>
 						</div>
+						
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<img src="./images/mongo.png" width="40px" height="40px">
+								<h3>MongoDB</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>65%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<img src="./images/native.png" width="150px" height="40px">
+								<h3>React Native</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>55%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -467,6 +493,27 @@
 2)Made a banking system using MERN stack.<br>
 3)Used React for frontend and ContextAPI to store the data, that was fetched from DB, in global state<br>
 4)Used Node (Express) and Mongo for the backend</p>             </div>
+							</div>
+						 </article>
+
+
+						 
+					  </div>
+				   </div>
+			   </div>
+			<div class="row">
+					<div class="col-md-12">
+					 <div class="timeline-centered">
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner">
+
+							   <div class="timeline-icon color-3">
+								  <i class="icon-pen2"></i>
+							   </div>
+
+							   <div class="timeline-label">
+								  <h2><a href="#">Software Development Engineer Intern</a> <span>2021</span></h2>
+								  <p>SDE Intern at BarRaiser</p>             </div>
 							</div>
 						 </article>
 
