--- a/index.html
+++ b/index.html
@@ -448,27 +448,7 @@
 					  </div>
 				   </div>
 			   </div>
-					  <div class="row">
-					<div class="col-md-12">
-					 <div class="timeline-centered">
-						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-							<div class="timeline-entry-inner">
-
-							   <div class="timeline-icon color-3">
-								  <i class="icon-pen2"></i>
-							   </div>
-
-							   <div class="timeline-label">
-								  <h2><a href="#">Frontend/UX Web Developer Intern</a> <span>2021</span></h2>
-								  <p>Intern at Ziksuka for a month as a frontend web developer</p>             </div>
-							</div>
-						 </article>
-
-
-						 
-					  </div>
-				   </div>
-			   </div>
+					
 			   <div class="row">
 					<div class="col-md-12">
 					 <div class="timeline-centered">
@@ -682,6 +662,20 @@
 										<p class="icon">
 											<span><a href="https://github.com/Samarthnehe/Amazon-Clone"><i class="icon-github"></i></a></span>
 											<span><a href=""><i class="icon-phone3"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+                        </div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/cyber.PNG);border: 1px solid black;">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Work 11</a></h3>
+										<span>CryptO Roulette</span>
+										<p class="icon">
+											<span><a href="https://github.com/Samarthnehe/Hackulus"><i class="icon-github"></i></a></span>
+											<span><a href="https://hackulus-6d620.web.app/"><i class="icon-phone3"></i></a></span>
 										</p>
 									</div>
 								</div>
