--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Samarth Nehe</strong>. I am primarily a Frontend Web-Developer and an avid Competitive Coder! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, JavaScript, ReactJS, NodeJS, MongoDB, and Figma. Presently I m learning Firebase and Powerapps. Also I am well versed with Python,C and C++ programming langauges.</p>
+										<p><strong>Hi I'm Samarth Nehe</strong>. I am primarily a Frontend Web-Developer and an avid Competitive Coder! I am always keen to learn new things regarding Technology. I am an intermediate web developer with good knowledge of HTML,CSS, Sass, JavaScript, ReactJS, NextJS, NodeJS, MongoDB, Figma and UI/UX. Presently I m learning UX and React Native. Also I am well versed with Python,C and C++ programming langauges.</p>
 										<p>Apart from Academics I am also a Speedcuber that makes me mention myself as the <strong>Founder and President of VIT C.U.B.E club</strong>, Sketch Artist and a singer-guitarist! I am a huge fan of Music and Mathematics!</p>
 									</div>
 								</div>
