--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Samarth</h1>
-						   					<h2 >Talk is cheap. Show me the CODE - Linus Torvalds</h2>
+						   					<h2 style="margin-top:50px">I believe that creative collaboration between technology and design is the magic that takes experience from good to great. </h2>
 												<p><a href="./images/finalresume.pdf" class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
