--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<img src="./images/native.png" width="150px" height="40px">
-								<h3>React Native</h3>
+								<img src="./images/graphql.png" width="150px" height="40px">
+								<h3>GraphQL</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
