--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<img src="./images/graphql.png" width="150px" height="40px">
+								<img src="./images/graphql_logo.png" width="150px" height="40px">
 								<h3>GraphQL</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
