--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 									<div class="services color-3" style="min-height: 300px;display: flex;justify-content: center;align-items: center;flex-direction: column;">
 										
 										<h3><a href="https://aws.plainenglish.io/what-is-amazon-eventbridge-and-how-to-use-it-75b567aa6ce8">What is Amazon EventBridge and how to use it?</a></h3>
-										<img src="images/aws.PNG" width="100%">
+										<img src="images/aws.png" width="100%">
 									</div>
 								</div>
 								
