--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 									<div class="services color-3" style="min-height: 300px;display: flex;justify-content: center;align-items: center;flex-direction: column;">
 										
 										<h3><a href="https://samarthnehe.medium.com/react-hooks-vs-class-components-c344b59f3bc">React Hooks vs Class Components</a></h3>
-										<img src="images/react.png" width="100%">
+										<img src="images/reactcomp.png" width="100%">
 									</div>
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInTop" >
