--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<img src="./images/react.png" width="40px" height="40px">
+								<img src="./images/react.PNG" width="40px" height="40px">
 								<h3>ReactJS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
