--- a/index.html
+++ b/index.html
@@ -438,8 +438,10 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Software Engineer Intern</a> <span>2020</span></h2>
-								  <p>Software Engineer Virtual Intern at JP Morgan.<br>Did this internship during the summer holidays for 2 weeks </p>             </div>
+								  <h2><a href="#">Software Engineer Intern</a><b>- J.P. Morgan, Indore</b> <span>2020</span></h2>
+								  <p>1) Attended the virtual internship provided by JP Morgan Chase.<br>
+									2) The role was to analyze the data using python and create a survey.<br>
+									3) Debug the front end part of the web application built on HTML, CSS and JS </p>             </div>
 							</div>
 						 </article>
 
@@ -460,8 +462,11 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">SharePoint Developer Intern</a> <span>2021</span></h2>
-								  <p>SharePoint and Powerapps developer intern at Czar Vision Technology Solutions, Pune</p>             </div>
+								  <h2><a href="#">SharePoint Developer Intern</a><b>- Czarvision Technology Solutions, Pune</b> <span>2021</span></h2>
+								  <p>1) Working on Microsoft power platforms especially Power Apps and SharePoint.<br>
+								2) Made a time-sheet for an organization using Microsoft Power Apps.<br>
+								3) The time-sheet used SharePoint and Office365 as data connectors to fetch and alter the data in the tables.<br>
+								4) Functionalities like Updating, Submitting, Viewing and Saving the time-sheet were implemented.</p>             </div>
 							</div>
 						 </article>
 
@@ -481,8 +486,11 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Web Development and Designing Intern</a> <span>2021</span></h2>
-								  <p>Intern at The Spark Foundation as a Web developer and designer</p>             </div>
+								  <h2><a href="#">Web Development and Designing Intern</a><b>- The Sparks Foundation, Indore</b> <span>2021</span></h2>
+								  <p>1)Worked on a project that was build using MERN stack. The internship was for a duration of 1 month.<br>
+									2)Made a banking system using MERN stack.<br>
+									3)Used React for frontend and ContextAPI to store the data, that was fetched from DB, in global state.<br>
+									4)Used Node (Express) and Mongo for the backend</p>             </div>
 							</div>
 						 </article>
 
@@ -502,8 +510,11 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Software Development Engineer Intern</a> <span>2021</span></h2>
-								  <p>SDE Intern at BarRaiser</p>             </div>
+								  <h2><a href="#">Software Development Engineer Intern</a><b>- BarRaiser, Bangalore</b> <span>2021</span></h2>
+								  <p>1) SDE Intern at BarRaiser working on technologies like Spring Boot, React, GraphQL and AWS.<br>
+								   2) Worked on Greenhouse Integration using API Gateways and AWS lambda functions.<br>
+								   3) Slack App notfication using Spring Boot, GraphQL, React and AWS.<br>
+								   4) Participated in the brainstorming activity where the team discussed about betterments.</p>             </div>
 							</div>
 						 </article>
 
