--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								</span>
 								<div class="desc">
 									<h3>Competitive Coding</h3>
-									<p>Well versed with programming languages like Python,C and C++. HackerRank Gold Badge awardee in C++ and Python </p>
+									<p>Well versed with programming languages like Python,C and C++. CodeChef Rating- 1751 </p>
 								</div>
 							</div>
 						</div>
@@ -438,7 +438,7 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Software Engineer Intern</a><b>- J.P. Morgan, Indore</b> <span>2020</span></h2>
+								  <h2><a href="#">Software Engineer Intern</a><b>- J.P. Morgan</b> <span>2020</span></h2>
 								  <p>1) Attended the virtual internship provided by JP Morgan Chase.<br>
 									2) The role was to analyze the data using python and create a survey.<br>
 									3) Debug the front end part of the web application built on HTML, CSS and JS </p>             </div>
@@ -486,11 +486,11 @@
 							   </div>
 
 							   <div class="timeline-label">
-								  <h2><a href="#">Web Development and Designing Intern</a><b>- The Sparks Foundation, Indore</b> <span>2021</span></h2>
-								  <p>1)Worked on a project that was build using MERN stack. The internship was for a duration of 1 month.<br>
-									2)Made a banking system using MERN stack.<br>
-									3)Used React for frontend and ContextAPI to store the data, that was fetched from DB, in global state.<br>
-									4)Used Node (Express) and Mongo for the backend</p>             </div>
+								  <h2><a href="#">Web Development and Designing Intern</a><b>- The Sparks Foundation</b> <span>2021</span></h2>
+								  <p>1) Worked on a project that was build using MERN stack. The internship was for a duration of 1 month.<br>
+									2) Made a banking system using MERN stack.<br>
+									3) Used React for frontend and ContextAPI to store the data, that was fetched from DB, in global state.<br>
+									4) Used Node (Express) and Mongo for the backend</p>             </div>
 							</div>
 						 </article>
 
